fixed overflow and some small bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,6 @@
 
 .App {
   text-align: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
