--- a/client/src/components/navbar/NavBar.css
+++ b/client/src/components/navbar/NavBar.css
@@ -4,27 +4,42 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
-    margin: 0;
     border-bottom: 3px solid #CECECE;
 }
 
 .leftNavbar {
     display: flex;
     justify-content: flex-start;
-    margin-left: 1.5%;
+    margin-left: 2.5%;
+}
+
+.logo {
+    margin-top: 1%;
+    height: 50px;
+    margin-bottom: 2%;
 }
 
 .rightNavbar  {
     display: flex;
-
+    margin-right: 5%;
 }
 
 .rightNavbar a {
     font-family: 'IBM Plex Sans', sans-serif;
     font-weight: bold;
     color: black;
-    font-size: 1.5em;
+    font-size: 2em;
     text-decoration: none;
-    margin-left: 1.5%;
+    margin: 2.5% 10% 2.5% 10%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
+
+/* .navbar-div-bar {
+    display: flex;
+    align-self: center;
+    margin-top: 2.5%;
+    width: 100%;
+    height: 2px;
+    background-color: #CECECE;
+} */
