--- a/client/src/pages/dashboard/Dashboard.css
+++ b/client/src/pages/dashboard/Dashboard.css
@@ -1,8 +1,8 @@
 .dashboard {
     display: flex;
     flex-wrap: wrap;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: white;
 }
 
@@ -12,29 +12,33 @@
     display: flex;
 }
 
-.proposal-list {
-    width: 50%;
+.left-proposals {
+    width: 45%;
     height: 100%;
     margin: 1em;
     display: flex;
     flex-flow: column;
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
 }
 
-.proposal-list::-webkit-scrollbar {
+.left-proposals::-webkit-scrollbar {
     display: none;
   }
 
+.proposal-list {
+    margin-top: 2.5%;
+    max-height: 75vh;
+    overflow-y: scroll;
+    position: relative;
+}
+
 .proposal-description {
-    width: 40%;
+    width: 50%;
     height: 100%;
     padding: 0.4em;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2.5%;
+    margin: 3em 0.5em 2em 2em;
     border: 2.5px solid #CECECE;
     border-radius: 10px;
     justify-content: space-evenly;
@@ -62,7 +66,7 @@
     display: flex;
     align-self: center;
     margin-top: 2.5%;
-    width: 80%;
+    width: 100%;
     height: 2px;
     background-color: #A6B82E;
 }
